--- a/08_node_inviare_html/md_src/05_404.md
+++ b/08_node_inviare_html/md_src/05_404.md
@@ -1,5 +1,13 @@
+# Gestire richieste 404
 
-## Gestire richieste 404
+In questa sezione dobbiamo imparare a gestire richieste verso risorse non esistenti.
+Il server deve gestirle inviando un messaggio opportuno e contestualmente segnalare 
+l'errore attraverso il codice 404 del protocollo HTTP.
+
+Nota: la ricerca del gestore corretto della richieste in un'applicazione NodeJS/Express
+viene effettuata dall'alto in basso (in maniera simile al costrutto switch/case).
+Di conseguenza, il gestore delle richieste non corrette deve essere l'ultimo.
+Inoltre, ad esso non sarà associato alcun URL e per questo invece di get() scriveremo use().  
 
 ```js
 // index.js
@@ -8,34 +16,16 @@ const express = require('express');
 
 const app = express();
 
+// la pagina principale
 app.get('/', function (req, res) {
     res.send('Hello, World!');
 });
 
+// tutte le altre richieste
 app.use(function (req, res) {
+    // imposta il codice di risposta
     res.status(404);
-    res.send('Page Not Found');
-});
-
-app.listen(3000);
-```
-
-## Inviare pagine HTML
-
-```js
-// index.js
-
-const express = require('express');
-const path = require('path');
-
-const app = express();
-
-app.get('/', function (req, res) {
-    res.sendFile( path.join(__dirname, 'public', 'index.html') );
-});
-
-app.use(function (req, res) {
-    res.status(404);
+    // e invia un messaggio
     res.send('Page Not Found');
 });
 
